--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,7 +10,8 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "auth:generate": "bunx @better-auth/cli@latest generate --config ./src/auth.ts --output ./src/db/auth-schema.ts"
+    "auth:generate": "bunx @better-auth/cli@latest generate --config ./src/auth.ts --output ./src/db/auth-schema.ts",
+    "smoke": "bun ./scripts/smoke-guilds.ts"
   },
   "dependencies": {
     "@discord/types": "workspace:*",
