--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -5,3 +5,22 @@ APP_ORIGIN=http://localhost:3000
 COOKIE_SECURE=false
 LOG_LEVEL=info
 GATEWAY_TOKEN_TTL_SECONDS=300
+
+# Bun reads both S3_* and AWS_* names. Use whichever you prefer.
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_REGION=
+S3_BUCKET=
+S3_ENDPOINT=
+S3_SESSION_TOKEN=
+S3_VIRTUAL_HOSTED_STYLE=false
+
+# Optional custom public base URL (ex: https://cdn.example.com/bucket)
+FILES_PUBLIC_BASE_URL=
+
+UPLOAD_MAX_AVATAR_BYTES=2000000
+UPLOAD_MAX_ATTACHMENT_BYTES=25000000
+UPLOAD_ALLOWED_ATTACHMENT_MIME=image/*,video/*,audio/*,application/pdf,text/plain
+UPLOAD_ALLOWED_AVATAR_MIME=image/png,image/jpeg,image/webp
+UPLOAD_PRESIGN_EXPIRES_SECONDS=600
+DOWNLOAD_PRESIGN_EXPIRES_SECONDS=900
