Add basic functionality for voice chat

--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "bun run dev:server & bun run dev:web",
+    "dev": "bun run dev:server & bun run dev:web & bun run dev:voice",
     "dev:server": "bun --filter @discord/server dev",
     "dev:web": "bun --filter @discord/web dev",
-    "build": "bun run build:server && bun run build:web",
+    "dev:voice": "bun --filter @discord/voice-server dev",
+    "build": "bun run build:server && bun run build:web && bun run build:voice",
     "build:server": "bun --filter @discord/server build",
     "build:web": "bun --filter @discord/web build",
+    "build:voice": "bun --filter @discord/voice-server build",
     "start": "bun run start:server",
     "start:server": "bun --filter @discord/server start",
     "start:web": "bun --filter @discord/web start",
+    "start:voice": "bun --filter @discord/voice-server start",
     "smoke": "bun --filter @discord/server smoke",
     "db:generate": "bun --filter @discord/server db:generate",
     "db:migrate": "bun --filter @discord/server db:migrate",
