--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -5,6 +5,10 @@ APP_ORIGIN=http://localhost:3000
 COOKIE_SECURE=false
 LOG_LEVEL=info
 GATEWAY_TOKEN_TTL_SECONDS=300
+VOICE_TOKEN_SECRET=dev-voice-secret-change-me
+VOICE_INTERNAL_SECRET=dev-voice-internal-secret-change-me
+VOICE_WS_URL=ws://localhost:3002/ws
+ICE_SERVERS_JSON=[{"urls":["stun:stun.l.google.com:19302"]}]
 
 # Bun reads both S3_* and AWS_* names. Use whichever you prefer.
 S3_ACCESS_KEY_ID=
@@ -24,3 +28,7 @@ UPLOAD_ALLOWED_ATTACHMENT_MIME=image/*,video/*,audio/*,application/pdf,text/plai
 UPLOAD_ALLOWED_AVATAR_MIME=image/png,image/jpeg,image/webp
 UPLOAD_PRESIGN_EXPIRES_SECONDS=600
 DOWNLOAD_PRESIGN_EXPIRES_SECONDS=900
+
+VOICE_PORT=3002
+VOICE_TOKEN_SECRET=dev-voice-secret-change-me
+VOICE_INTERNAL_SECRET=dev-voice-internal-secret-change-me
