Use mediasoup instead of TURN/STUN

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,2 +1,4 @@
 BUN_PUBLIC_API_BASE_URL=http://localhost:3001
 BUN_PUBLIC_GATEWAY_URL=ws://localhost:3001/gateway
+BUN_PUBLIC_USE_MEDIASOUP_VOICE=true
+BUN_PUBLIC_DEBUG_VOICE=false
