--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
+    "mediasoup-client": "^3.15.6",
     "radix-ui": "^1.4.3",
     "react": "^19",
     "react-dom": "^19",
@@ -32,7 +33,6 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/node": "^25.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4.1.11",
