--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "bun run dev:server & bun run dev:web & bun run dev:voice",
+    "dev": "bun run dev:server & bun run dev:web & bun run dev:mediasoup",
     "dev:server": "bun --filter @discord/server dev",
     "dev:web": "bun --filter @discord/web dev",
+    "dev:mediasoup": "bun --filter @discord/mediasoup-server dev",
     "dev:voice": "bun --filter @discord/voice-server dev",
-    "build": "bun run build:server && bun run build:web && bun run build:voice",
+    "build": "bun run build:server && bun run build:web && bun run build:mediasoup",
     "build:server": "bun --filter @discord/server build",
     "build:web": "bun --filter @discord/web build",
+    "build:mediasoup": "bun --filter @discord/mediasoup-server build",
     "build:voice": "bun --filter @discord/voice-server build",
     "start": "bun run start:server",
     "start:server": "bun --filter @discord/server start",
     "start:web": "bun --filter @discord/web start",
+    "start:mediasoup": "bun --filter @discord/mediasoup-server start",
     "start:voice": "bun --filter @discord/voice-server start",
     "smoke": "bun --filter @discord/server smoke",
     "db:generate": "bun --filter @discord/server db:generate",
