Rebrand to edgewire

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -1,5 +1,5 @@
 PORT=3001
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/discord_clone_dm
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/edgewire_dm
 BETTER_AUTH_SECRET=replace-with-a-strong-random-value
 APP_ORIGIN=http://localhost:3000
 COOKIE_SECURE=false
