--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@discord/server",
+  "name": "@edgewire/server",
   "version": "0.0.1",
   "private": true,
   "type": "module",
@@ -14,7 +14,7 @@
     "smoke": "bun ./scripts/smoke-guilds.ts"
   },
   "dependencies": {
-    "@discord/types": "workspace:*",
+    "@edgewire/types": "workspace:*",
     "better-auth": "^1.3.10",
     "drizzle-orm": "^0.44.5",
     "postgres": "^3.4.7",
