--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discord-clone",
+  "name": "edgewire",
   "private": true,
   "workspaces": [
     "apps/*",
@@ -7,24 +7,24 @@
   ],
   "scripts": {
     "dev": "bun run dev:server & bun run dev:web & bun run dev:mediasoup",
-    "dev:server": "bun --filter @discord/server dev",
-    "dev:web": "bun --filter @discord/web dev",
-    "dev:mediasoup": "bun --filter @discord/mediasoup-server dev",
-    "dev:voice": "bun --filter @discord/voice-server dev",
+    "dev:server": "bun --filter @edgewire/server dev",
+    "dev:web": "bun --filter @edgewire/web dev",
+    "dev:mediasoup": "bun --filter @edgewire/mediasoup-server dev",
+    "dev:voice": "bun --filter @edgewire/voice-server dev",
     "build": "bun run build:server && bun run build:web && bun run build:mediasoup",
-    "build:server": "bun --filter @discord/server build",
-    "build:web": "bun --filter @discord/web build",
-    "build:mediasoup": "bun --filter @discord/mediasoup-server build",
-    "build:voice": "bun --filter @discord/voice-server build",
+    "build:server": "bun --filter @edgewire/server build",
+    "build:web": "bun --filter @edgewire/web build",
+    "build:mediasoup": "bun --filter @edgewire/mediasoup-server build",
+    "build:voice": "bun --filter @edgewire/voice-server build",
     "start": "bun run start:server",
-    "start:server": "bun --filter @discord/server start",
-    "start:web": "bun --filter @discord/web start",
-    "start:mediasoup": "bun --filter @discord/mediasoup-server start",
-    "start:voice": "bun --filter @discord/voice-server start",
-    "smoke": "bun --filter @discord/server smoke",
-    "db:generate": "bun --filter @discord/server db:generate",
-    "db:migrate": "bun --filter @discord/server db:migrate",
-    "db:studio": "bun --filter @discord/server db:studio",
-    "auth:generate": "bun --filter @discord/server auth:generate"
+    "start:server": "bun --filter @edgewire/server start",
+    "start:web": "bun --filter @edgewire/web start",
+    "start:mediasoup": "bun --filter @edgewire/mediasoup-server start",
+    "start:voice": "bun --filter @edgewire/voice-server start",
+    "smoke": "bun --filter @edgewire/server smoke",
+    "db:generate": "bun --filter @edgewire/server db:generate",
+    "db:migrate": "bun --filter @edgewire/server db:migrate",
+    "db:studio": "bun --filter @edgewire/server db:studio",
+    "auth:generate": "bun --filter @edgewire/server auth:generate"
   }
 }
